# trueform

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ollama-setup.md  testing-guide-for-reviewers.md
examples/: sample.txt
src/trueform/: __init__.py  __main__.py  cli.py  config.py  doctor.py
src/trueform/pipeline/: __init__.py  humanizer.py  prompts.py  protect.py  report.py  scoring.py
src/trueform/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  ollama_provider.py  openai_provider.py
src/trueform/web/: __init__.py  server.py
src/trueform/web/static/: index.html
tests/: test_doctor.py  test_humanizer.py  test_prompts.py  test_protect.py  test_providers.py  test_report.py  test_scoring.py  test_web.py
