[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trueform"
version = "0.1.0"
description = "Open-source, self-hostable, bring-your-own-key text humanizer. Makes AI-assisted writing sound like a real person — yours."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Fenet" }]
keywords = ["humanizer", "ai", "nlp", "writing", "text", "rewrite", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
trueform = "trueform.cli:app"

[project.urls]
Homepage = "https://github.com/your-username/trueform"
Repository = "https://github.com/your-username/trueform"

[tool.hatch.build.targets.wheel]
packages = ["src/trueform"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
